--- a/src/noren.scss
+++ b/src/noren.scss
@@ -6,6 +6,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  box-sizing: border-box;
+  width: 100%;
 
   // Overriding
   @at-root {
