Assemble breakpoints and options into config

--- a/src/_config.scss
+++ b/src/_config.scss
@@ -1,4 +1,14 @@
+// name
 $name: "noren";
+
+// breakpoints
+$xs: 320px;
+$sm: 540px;
+$md: 720px;
+$lg: 960px;
+$xl: 1200px;
+
+// outermost
 $outermost-padding-left: 10px;
 $outermost-padding-right: 10px;
 $outermost-width: 920px;
