--- a/src/_core.scss
+++ b/src/_core.scss
@@ -19,6 +19,15 @@
   }
 }
 
+@mixin ends($range) {
+  .#{$range}-left-end {
+    margin-left: 0 !important;
+  }
+  .#{$range}-right-end {
+    margin-right: 0 !important;
+  }
+}
+
 .#{$name} {
   display: flex;
   flex-wrap: wrap;
@@ -48,7 +57,8 @@
     flex-basis: $val;
   }
 }
-@include flex-position-rules(g);
+@include flex-position-rules(g)
+@include ends(g)
 
 @each $range, $spec in $ranges {
   @media #{$spec} {
@@ -61,5 +71,6 @@
       }
     }
     @include flex-position-rules($range)
+    @include ends($range)
   }
 }
