--- a/src/_config.scss
+++ b/src/_config.scss
@@ -2,11 +2,11 @@
 $name: "noren";
 
 // breakpoints
-$xs: 320px;
-$sm: 540px;
-$md: 720px;
-$lg: 960px;
-$xl: 1200px;
+$extra-small : 320px;
+$small       : 540px;
+$medium      : 720px;
+$large       : 960px;
+$extra-large : 1200px;
 
 // outermost
 $outermost-padding-left: 10px;
